Fix poem spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,6 @@ main {
     font-size: 1.1rem;
     line-height: 1.7;
     color: #1A2417;
-    white-space: pre-line;
     margin: 0;
     text-align: left;
     font-family: 'Georgia', serif;
